# trackings-demo

./: docker-compose.yaml  dockerfile
option/: example.ipynb  example2.ipynb  pyproject.toml
option/wheels/: cython_bbox-0.1.3-cp39-cp39-linux_x86_64.whl  pycocotools-2.0.4-cp39-cp39-linux_x86_64.whl
trackron/: README.md  req.txt
