[project]
name = "option"
version = "0.1.0"
description = ""
authors = [
    {name = "n-jun-k2"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "torch (==1.10.1+cu111)",
    "torchvision (==0.11.2+cu111)",
    "tao @ git+https://github.com/TAO-Dataset/tao@0f9f4bd654b775f5b59086cb8a8cf2bd91b91f98",
    "numpy (==1.26.4)",
    "opencv-python (<4.10)",
    "scikit-build (>=0.18.1,<0.19.0)",
    "cmake (>=4.1.0,<5.0.0)",
    "lapx (>=0.5.11.post1,<0.6.0)",
    "cython-bbox @ file:///src/option/wheels/cython_bbox-0.1.3-cp39-cp39-linux_x86_64.whl",
    "fvcore (==0.1.5.post20210415)",
    "jpeg4py (==0.1.4)",
    "timm (==0.4.5)",
    "numba (>=0.59,<0.60)",
    "scikit-video (>=1.1.11,<2.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "matplotlib (==3.5.1)",
    "visdom (==0.1.8.9)",
    "pillow (<10)",
    "cloudpickle (==1.6.0)",
    "pycocotools @ file:///src/option/wheels/pycocotools-2.0.4-cp39-cp39-linux_x86_64.whl",
    "lvis (==0.5.3)",
    "einops (==0.3.0)",
    "scikit-image (<0.20)",
    "filterpy (==1.4.5)",
    "seaborn (==0.11.2)"
]


[project.optional-dependencies]
no-build-isolation = ["cython-bbox (==0.1.3)"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu111/torch_stable.html"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch-gpu"}
torchvision = {source = "torch-gpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

